--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,10 @@
         "zizaco/entrust": "1.9.1",
         "spatie/laravel-backup": "^6.*"
     },
-    "require-dev": {
-        "lehunghut/CrmAdmin": "^1.0.1"
+    "extra": {
+        "branch-alias": {
+          "dev-master": "1.0-dev"
+        }
     },
     "authors": [
         {
@@ -31,4 +33,5 @@
            "src/Models"
        ]
     }
+
 }
