--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,10 @@
  {
-    "name": "lehunghut/CrmAdmin",
+    "name": "lehunghus/CrmAdmin",
     "description": "IdeaAdmin is a Open source Laravel Admin Panel / CMS which can be used as Admin Backend, Data Management Tool or CRM boilerplate for Laravel with features like CRUD Generation, Module Manager, Media, Menus, Backups and much more",
     "keywords": ["php", "laravel", "crm", "admin", "cms", "administrator"],
     "license": "MIT",
     "require": {
+        "vendor/package": "1.0.1",
         "illuminate/support": "7.*",
         "laravelcollective/html": "^6.0",
         "illuminate/container": "^8.0",
